--- a/front/package.json
+++ b/front/package.json
@@ -13,5 +13,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "typescript": "^4.2.4"
   }
 }
