--- a/front/package.json
+++ b/front/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "swr": "^0.4.0"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
