--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.4",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.4"
