--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
-    "next": "10.0.5",
+    "next": "^10.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
